# bitchat-to-sonar

./: .gitignore  AGENTS.md  CLAUDE.md  Justfile  README.md  WHITEPAPER.md
.github/workflows/: core-tests.yml  pages.yml  swift-tests.yml
android/: .gitignore  gradle.properties  settings.gradle.kts
android/composeApp/: build.gradle.kts
android/gradle/: libs.versions.toml
apps/sonar/: .gitignore  README.md  build.gradle.kts
apps/sonar/composeApp/: build.gradle.kts  macos-entitlements.plist  sonar.icns
apps/sonar/gradle/: libs.versions.toml
benchmark/: README.md
benchmark/cold-start-sync-2026-06-24/: RESULTS.md  device-markers-4run-split.txt  device-markers-5run.txt  device-phase-table.txt  sim-phase-table.txt
bitchat/: BitchatApp.swift
bitchat.xcodeproj/: project.pbxproj
bitchat/Protocols/: SonarDiscovery.swift
bitchat/Services/: KeychainManager.swift  MarmotService.swift  MessageStore.swift  UnifyNearbyService.swift  UnifyReceiverService.swift  WalletBridgeService.swift
bitchat/Services/BLE/: BLEService.swift
bitchat/ViewModels/: ChatViewModel.swift
bitchat/Views/: MarmotChatView.swift
bitchat/Views/Components/: SonarStatusChip.swift
bitchat/Views/Sonar/: BridgedWallet.swift  SonarAppStore.swift  (+10 more)
bitchatTests/Protocols/: SonarDiscoveryTests.swift
bitchatTests/Services/: UnifyReceiverTests.swift
core/: .gitignore  Cargo.toml  build-android.sh  build-desktop.sh  build-ios.sh
core/sonar-ble/: Cargo.toml
core/sonar-ble/src/: lib.rs
core/sonar-cli/: Cargo.toml  README.md
core/sonar-cli/hermes/: SKILL.md
core/sonar-cli/src/: call.rs  main.rs
core/sonar-core/: Cargo.toml
core/sonar-core/examples/: query_peer.rs  test_invite.rs  test_invite_all.rs
core/sonar-core/src/: client.rs  conversation_index.rs  error.rs  geohash.rs  identity.rs  invite_link.rs  lib.rs  marmot.rs  mesh.rs  noise.rs  notification.rs  outbox.rs  push.rs  relay_directory.rs  sonar_descriptor.rs
core/sonar-core/src/call/: codec.rs  device.rs  engine.rs  identity.rs  media.rs  mod.rs  signaling.rs  transport.rs
core/sonar-core/tests/: bitchat_interop.rs  e2e.rs  group_invites.rs  media.rs  mesh_media.rs  persistence.rs
core/sonar-ffi/: Cargo.toml
core/sonar-ffi/src/: android_jni.rs  lib.rs
core/sonar-stickers/: Cargo.toml
core/sonar-stickers/src/: blossom.rs  error.rs  lib.rs  message.rs  model.rs  nostr.rs  signal.rs  validation.rs  wasm.rs
core/sonar-stickers/tests/: sticker_contract_fixtures.rs
core/sonar-stickers/tests/fixtures/: sticker-contract-v1.json
crashes/: .gitignore
deploy/: .env.example  .gitignore  README.md  compose.yml
deploy/breez-nds/: Dockerfile
deploy/transponder/: APNS-ENVIRONMENTS.md
design/: SOURCE.md
design/handoff/: README.md
docs/: ANDROID-IOS-PARITY-DELIVERY-PLAN.md  HERMES-AGENT.md  MARMOT-PERSISTENCE.md  MOCK-REMOVAL-PLAN.md  PERFORMANCE.md  SONAR-DEMO-TESTPLAN.md  SONAR-DISCOVERY.md  SONAR-NOTIFICATIONS.md  SONAR-PAYMENTS.md  SONAR-STICKERS-NATIVE-PLAN.md  SONAR-STICKERS.md  UNIFY-INTEROP.md  VOICE-CALLS.md  WALLET-INTEGRATION.md  android-push-integration.md  bip353-registration.md  ios-offline-receive-fcm-plan.md  ios-offline-receive-nse.md  ios-push-integration.md
docs/brainstorms/: 2026-06-11-sonar-bitchat-marmot-cross-platform.md  2026-06-12-money-display-fiat-toggle.md  2026-06-12-persistent-chats-across-restarts.md  2026-06-12-unify-bidirectional-payments.md  2026-06-12-wallet-derived-from-identity.md  2026-06-13-android-discovery-parity.md  2026-06-13-android-ios-parity.md  2026-06-14-android-radar-peer-chat-transport.md  2026-06-15-marmot-mesh-media-sharing.md  2026-06-16-capabilities-on-whitenoise-accounts.md  2026-06-17-direct-bolt12-payments.md  2026-06-17-marmot-group-chat-feature-complete.md  2026-06-18-signal-local-first-transcript.md  2026-06-18-signal-style-gif-discovery.md  2026-06-18-sonar-stickers-ship-plan.md  2026-06-21-sonar-cli-hermes-agent.md  2026-06-22-darkmatter-experimental-backend.md  2026-06-22-group-invite-links-shareable.md  2026-06-26-ios-offline-bolt12-webhook.md  2026-06-28-ble-discovery-battery-saving.md  2026-06-28-core-owned-notification-envelope.md
ios/: Package.resolved  add_firebase.rb  add_nse_target.rb
ios/Configs/: Debug.xcconfig  Local.xcconfig.example  Release.xcconfig
ios/SonarNotificationService/: Info.plist  NotificationService.swift  SonarNotificationService.entitlements
ios/TestFlight/: WhatToTest.md
ios/bitchat/: BitchatApp.swift  Info.plist  Localizable.xcstrings  bitchat-macOS.entitlements  bitchat.entitlements
ios/bitchat.xcodeproj/: project.pbxproj
ios/bitchatShareExtension/: Info.plist  ShareViewController.swift
ios/bitchatTests/: BLEServiceCoreTests.swift  BLEServiceTests.swift  ChatViewModelDeliveryStatusTests.swift  ChatViewModelExtensionsTests.swift  ChatViewModelRefactoringTests.swift  ChatViewModelTests.swift  ChatViewModelTorTests.swift  CommandProcessorTests.swift  FontBitchatTests.swift  GCSFilterTests.swift  GeohashBookmarksStoreTests.swift  GeohashParticipantTrackerTests.swift  GeohashPresenceTests.swift  GossipSyncManagerTests.swift  InputValidatorTests.swift  KeychainErrorHandlingTests.swift  LocationChannelsTests.swift  LocationNotesManagerTests.swift  MessageDeduplicationServiceTests.swift  MessageFormattingEngineTests.swift  MimeTypeTests.swift  NostrEOSECompletionTrackerTests.swift  NostrEventDispatchDeduperTests.swift  NostrProtocolTests.swift  NostrRelayURLCanonicalizationTests.swift  NotificationBlockingTests.swift  NotificationStreamAssemblerTests.swift  PublicMessagePipelineTests.swift  SonarGifDiscoveryTests.swift  SonarMoneyDisplayTests.swift  SonarStickersTests.swift  SubscriptionRateLimitTests.swift  XChaCha20Poly1305CompatTests.swift
localPackages/SonarCore/: Package.swift
localPackages/SonarWalletKit/: .gitignore
scripts/: test-push.sh
scripts/bench/: README.md  _aggregate.py  build-sim.sh  cold-start-bench.sh  device-bench.sh  provision-and-bench.sh
scripts/crash/: README.md  symbolicate.py
web/: README.md  package-lock.json  package.json  svelte.config.js
web/src/: app.css  app.html
(+294 files in other folders)
