[workspace]
resolver = "2"
members = ["sonar-core", "sonar-ffi"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.85"

# Size-optimized release builds (the staticlib ships inside the iOS app).
# Kept in the profile (not RUSTFLAGS): `-C lto` via RUSTFLAGS clashes with
# cargo's `-C embed-bitcode=no` default for dependency crates.
[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 1

[workspace.dependencies]
mdk-core = "0.8.0"
mdk-storage-traits = "0.8.0"
mdk-memory-storage = "0.8.0"
mdk-sqlite-storage = "0.8.0"
nostr = { version = "0.44", features = ["std", "nip44", "nip59"] }
nostr-sdk = "0.44"
nostr-relay-builder = "0.44"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time"] }
thiserror = "2"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
tempfile = "3.20"
