# Desktop BLE radio bridge for Sonar — the native shim that gives the Compose
# Desktop (JVM) app real Bluetooth LE (central + peripheral) via CoreBluetooth on
# macOS / BlueZ on Linux, reached from Kotlin over UniFFI (like sonar-core).
#
# Detached from the parent core/ workspace (own [workspace] below) so its BLE
# deps don't perturb the sonar-ffi build or the `cargo test --workspace` CI.
[package]
name = "sonar-ble"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
name = "sonar_ble"
# cdylib for JNA loading from the Compose Desktop (JVM) app; lib so the demo bin
# and tests can link it.
crate-type = ["cdylib", "lib"]

[[bin]]
name = "ble-demo"
path = "src/bin/ble_demo.rs"

[dependencies]
btleplug = "0.11"          # central role (scan/connect/notify) — CoreBluetooth/BlueZ
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
futures = "0.3"
uuid = "1"
once_cell = "1"
serde_json = "1"
# Peripheral role (advertise + GATT server) — CoreBluetooth/BlueZ. Vendored +
# patched: upstream 0.2.0 advertises macOS service UUIDs as NSString instead of
# CBUUID, which CoreBluetooth rejects ("invalid parameters"). See vendor/bluster.
bluster = { path = "vendor/bluster" }
uuid08 = { package = "uuid", version = "0.8" }  # bluster's UUID type (its API predates uuid 1.x)
