[package]
name = "sonar-cli"
description = "Headless Sonar CLI for agents and automation"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sonar-core = { path = "../sonar-core" }
clap = { version = "4", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
getrandom = "0.2"
hex.workspace = true
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
