[package]
name = "sonar-core"
description = "Headless core for Sonar: Nostr identity + Marmot (MLS over Nostr) messaging"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
# P2P voice/video calls — the iroh QUIC transport (NodeId-authenticated,
# NAT-hole-punching). Feature-gated so the default messaging build + `cargo
# test --workspace` (CI) stay lean and never compile iroh. The `☎CALL`
# signaling codec (call::signaling) is NOT gated — it is pure and always built.
# The cpal/opus media pipeline lands behind a later `calls-audio` feature
# (plan: docs/plans/2026-06-16-p2p-calls-iroh-callme.md).
calls = ["dep:iroh", "dep:anyhow"]

[dependencies]
# iroh: authenticated, encrypted, NAT-traversing P2P QUIC transport for the
# call media path (peers addressed by an Ed25519 NodeId). Optional + gated.
#
# VERSION NOTE: we use iroh 1.0 (modern, buildable dep tree). The media RTP
# layer iroh-roq 0.1 still pins iroh ^0.33, whose old dep tree (rcgen 0.13.2,
# netwatch 0.3) does NOT compile on the current toolchain — so the media phase
# must either wait for an iroh-roq release on iroh 1.0, or build RTP-over-iroh
# directly on iroh 1.0 datagrams + the `rtp` crate (skip iroh-roq). See the
# plan's "P0 attempt findings". The transport (this module) is iroh-only and
# builds cleanly on 1.0.
iroh = { version = "1", optional = true }
anyhow = { version = "1", optional = true }
mdk-core.workspace = true
mdk-storage-traits.workspace = true
mdk-memory-storage.workspace = true
# Persistent storage: mdk-sqlite-storage wraps rusqlite with the (hardcoded)
# `bundled-sqlcipher` feature. On Apple host→Apple target builds the libsqlite3-sys
# build.rs compiles SQLCipher against CommonCrypto (-DSQLCIPHER_CRYPTO_CC, links
# Security + CoreFoundation), so NO OpenSSL is needed for iOS cross-builds —
# provided OPENSSL_DIR / OPENSSL_LIB_DIR / OPENSSL_INCLUDE_DIR are NOT set.
mdk-sqlite-storage.workspace = true
nostr.workspace = true
nostr-sdk.workspace = true
# Blossom blob storage (BUD-01/02) for encrypted media (Marmot MIP-04). Uses
# reqwest with rustls-tls only (NO OpenSSL) — keeps the iOS cross-build clean.
nostr-blossom = "0.44"
# Direct HTTP to download a media blob by its full imeta URL. Same rustls-tls
# feature set as nostr-blossom so cargo unifies ONE reqwest build (no
# native-tls/OpenSSL → iOS/Android cross-compile stays OpenSSL-free).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Map a filename extension → MIME type for outgoing media.
mime_guess = "2"
tokio.workspace = true
thiserror.workspace = true
hex.workspace = true
tracing.workspace = true
serde.workspace = true
# Noise XX session crypto for the BLE mesh transport (bitchat uses
# Noise_XX_25519_ChaChaPoly_SHA256). `snow` is a vetted pure-Rust Noise impl.
snow = "0.9"
# Ed25519 (RFC 8032) for the bitchat mesh identity-announce signature —
# wire-interoperable with Apple's Curve25519.Signing on iOS.
ed25519-dalek = "2"
getrandom = "0.2"

# SQLCipher needs a crypto backend. Apple targets compile it against
# CommonCrypto (no OpenSSL — see the mdk-sqlite-storage note above). Android
# has no CommonCrypto, so vendor OpenSSL for the SQLCipher build: the
# `bundled-sqlcipher-vendored-openssl` feature makes libsqlite3-sys compile
# OpenSSL from source (openssl-sys/openssl-src, via cargo-ndk's cross
# toolchain) and feeds DEP_OPENSSL_INCLUDE into the SQLCipher cc build.
# Target-scoped so iOS keeps the CommonCrypto path untouched.
[target.'cfg(target_os = "android")'.dependencies]
libsqlite3-sys = { version = "0.35", features = ["bundled-sqlcipher-vendored-openssl"] }

[dev-dependencies]
nostr-relay-builder.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
# Content-addressing for the in-test mock Blossom server (media e2e).
sha2 = "0.10"
# Match the libsqlite3-sys (0.35) that mdk-sqlite-storage pulls in, so the
# self-heal test can fabricate a PLAINTEXT SQLite file with the same SQLCipher
# build that the engine then opens with a key.
rusqlite = { version = "0.37", features = ["bundled-sqlcipher"] }
