[package]
name = "sonar-ffi"
description = "UniFFI bindings for sonar-core (Swift/Kotlin shells)"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "sonar_ffi"
# staticlib for the iOS/macOS xcframework, cdylib (.so) for Android JNI
# loading, lib so `cargo test` works.
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["cli"]

[features]
# Host-only helper used by core/build-ios.sh; never enabled for device builds.
cli = ["uniffi/cli"]
# P2P voice calls: exposes the `call_*` SonarNode methods + the ☎CALL signaling
# helpers, backed by sonar-core's iroh/cpal/opus call engine. The device build
# scripts (build-ios.sh / build-android.sh) enable this; the default `cargo test`
# build stays lean (no iroh/cpal/opus). The whole call FFI is `#[cfg]`-gated on it.
calls-audio = ["sonar-core/calls-audio"]

[dependencies]
sonar-core = { path = "../sonar-core" }
sonar-stickers = { path = "../sonar-stickers" }
uniffi = "0.31"
nostr.workspace = true
tokio.workspace = true
thiserror.workspace = true
hex.workspace = true
# Logging bridge (init_logging): the call transport/media live in sonar-core and
# log via `tracing`, but no shipped build ever installed a subscriber, so iroh /
# call diagnostics were silently dropped. `env-filter` lets hosts raise verbosity
# via RUST_LOG without a recompile (all its deps are already in the lock).
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Android-only: the JNI shim in src/android_jni.rs publishes the JavaVM +
# Application Context to `ndk_context` so the crates that reach Android system
# services via JNI (hickory-resolver during iroh Endpoint::bind, cpal/oboe for
# AAudio) work when this .so is dlopen'd by UniFFI's JNA bindings. Both are
# already in the dependency tree (pulled by iroh/cpal) — reused, default features.
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1.1"
